---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: ???
  Features:
    - Added arrow pointing from player to highlighted results
    - Optimised search time by ≈20% when many search modes are enabled
  Bugfixes:
    - Fixed results not opening when viewing the map whilst in Navigation Satellite
    - Fixed interface not responding to E (close) after opening results in Navigation Satellite (waiting for SE to fix this properly)
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 25 May 2022
  Bugfixes:
    - Fixed crash when searching multiple surfaces
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 25 May 2022
  Features:
    - Added 'Tag' search option to search for map tags
  Changes:
    - Search results on the same surface also open in Navigation Satellite once it is unlocked (when using Space Exploration)
  Bugfixes:
    - Fixed crash when pinning interface if Factorio Library (flib) is not installed
    - Fixed crash when searching for a virtual signal when 'Logistics' is enabled and 'Signal' is not
    - Fixed 'Entity' search not finding certain modded entities (e.g. electric offshore pumps, spidertron docks)
---------------------------------------------------------------------------------------------------
Version: 1.5.3
Date: 8 May 2022
  Bugfixes:
    - Fixed crash when search results include an entity with no icon (e.g. Space Exploration's 'Space probe rocket').
---------------------------------------------------------------------------------------------------
Version: 1.5.2
Date: 5 May 2022
  Bugfixes:
    - Fixed crash when loading a save that has had a player removed or in the scenario editor
---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 30 April 2022
  Features: