@@ -1,6 +1,6 @@
 {
     "name": "FactorySearch",
-    "version": "1.6.1",
+    "version": "1.6.2",
     "title": "Factory Search",
     "author": "Xorimuth",
     "description": "Search your factory for items, fluids, entities, signals, tags and more, with Control + Shift + F. Returns a list of buildings, clicking on a result opens it in the map. Supports Space Exploration (works across all surfaces).\nControl + Shift + Click on almost anything (e.g. built entity, inventory item, recipe) to open the search with that item selected.\nSimilar to BeastFinder and Where is it Made?",
