@@ -16,11 +16,13 @@ no-results=No results found
 incorrect-config=At least one checkbox must be selected
 wrong-surface=Can't open map on a different surface
 invalid-item=Selected object must be an item, fluid, or signal
+module-count-tooltip=Module count
 request-count-tooltip=Request count
 signal-count-tooltip=Signal count
 producers-name=Product
 storage-name=Storage
 logistics-name=Logistics
+modules-name=Module
 requesters-name=Request
 ground-items-name=Ground
 entities-name=Entity
@@ -29,6 +31,7 @@ map-tags-name=Tag
 producers-tooltip=Search for machines that produce this item\n(e.g. __1__)
 storage-tooltip=Search for containers that contain this item\n(e.g. __1__)
 logistics-tooltip=Search for logistics entities that are transporting this item\n(e.g. __1__) 
+modules-tooltip=Search for machines that are using this module\n(e.g. __1__)
 requesters-tooltip=Search for logistic containers that are requesting this item\n(e.g. __1__ and machines requesting modules)
 ground-items-tooltip=Search for this item on the ground
 entities-tooltip=Search for built entities of this item
